"""First Migration

Revision ID: 4f3e07e5a31a
Revises: 
Create Date: 2023-10-21 16:19:11.368369

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = '4f3e07e5a31a'
down_revision: Union[str, None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('role',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('sdes', sa.String(length=255), nullable=True),
    sa.PrimaryKeyConstraint('id'),
    schema='auth'
    )
    op.create_table('city',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('sdes', sa.String(length=255), nullable=True),
    sa.PrimaryKeyConstraint('id'),
    schema='event'
    )
    op.create_table('country',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('sdes', sa.String(length=255), nullable=True),
    sa.PrimaryKeyConstraint('id'),
    schema='event'
    )
    op.create_table('event',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('sdes', sa.String(length=255), nullable=True),
    sa.Column('date', sa.Date(), nullable=True),
    sa.PrimaryKeyConstraint('id'),
    schema='event'
    )
    op.create_table('user',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('name', sa.String(length=255), nullable=False),
    sa.Column('last_name', sa.String(length=255), nullable=False),
    sa.Column('mail', sa.String(length=255), nullable=False),
    sa.Column('password_hash', sa.String(length=128), nullable=False),
    sa.Column('id_role', sa.Integer(), nullable=True),
    sa.ForeignKeyConstraint(['id_role'], ['auth.role.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('mail'),
    schema='auth'
    )
    op.create_table('event_location',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('id_event', sa.Integer(), nullable=True),
    sa.Column('id_country', sa.Integer(), nullable=True),
    sa.Column('id_city', sa.Integer(), nullable=True),
    sa.ForeignKeyConstraint(['id_city'], ['event.city.id'], ),
    sa.ForeignKeyConstraint(['id_country'], ['event.country.id'], ),
    sa.ForeignKeyConstraint(['id_event'], ['event.event.id'], ),
    sa.PrimaryKeyConstraint('id'),
    schema='event'
    )
    op.create_table('subscriptionEvent',
    sa.Column('id_user', sa.Integer(), nullable=False),
    sa.Column('id_event', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['id_event'], ['event.event.id'], ),
    sa.ForeignKeyConstraint(['id_user'], ['auth.user.id'], ),
    sa.PrimaryKeyConstraint('id_user', 'id_event'),
    schema='event'
    )
    op.create_table('log',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('user_mail', sa.String(length=255), nullable=True),
    sa.Column('body_data', sa.JSON(), nullable=True),
    sa.Column('host', sa.String(length=255), nullable=False),
    sa.Column('route', sa.String(length=255), nullable=False),
    sa.Column('date', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['user_mail'], ['auth.user.mail'], ),
    sa.PrimaryKeyConstraint('id'),
    schema='kpi'
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('log', schema='kpi')
    op.drop_table('subscriptionEvent', schema='event')
    op.drop_table('event_location', schema='event')
    op.drop_table('user', schema='auth')
    op.drop_table('event', schema='event')
    op.drop_table('country', schema='event')
    op.drop_table('city', schema='event')
    op.drop_table('role', schema='auth')
    # ### end Alembic commands ###
